feat(version): 0.2.2-SNAPSHOT